--- a/manifests/app-owner/1-apps/httpbin-in-mesh.yaml
+++ b/manifests/app-owner/1-apps/httpbin-in-mesh.yaml
@@ -36,7 +36,7 @@ spec:
       labels:
         app: in-mesh
         version: v1
-        istio.io/rev: 1-15
+        istio.io/rev: 1-15-0
     spec:
       serviceAccountName: in-mesh
       containers:
